--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -21,7 +21,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,0
-	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	node_attach = 0.0, 0.0, 0.0, 0.75, 0.0, 0.0, 1, 1
 
 	TechRequired = basicScience
 	entryCost = 1500
@@ -50,12 +50,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = antenna2Animation
-		extendActionName = #autoLOC_6002398 //#autoLOC_6002398 = Extend <<1>>
-		retractActionName = #autoLOC_6002399 //#autoLOC_6002399 = Retract <<1>>
-		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
-		// startEventGUIName = #autoLOC_6001338 // Extend
-		// endEventGUIName = #autoLOC_6001339 // Retract
-		// actionGUIName = #autoLOC_6001337 // Toggle Deploy
+		startEventGUIName = #RSS-MAG-ant-strt // Extend Antenna
+		endEventGUIName = #RSS-MAG-ant-stop // Retract Antenna
+		actionGUIName = #RSS-MAG-ant-actn // Antenna Toggle
 	 	isOneShot = false
 		eventAvailableEditor = True
 		eventAvailableFlight = True
