--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -23,8 +23,8 @@ PART
 	vesselType = Relay
 
 	attachRules = 1,1,0,0,0
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = 0.0, 0.1, 0.0, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.1, 0.0, 0.0, -1.0, 0.0, 0, 1
 
 	TechRequired = automation
 	entryCost = 1000
