--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
@@ -22,7 +22,7 @@ PART
 	bulkheadProfiles =  srf
 
 	attachRules = 1,1,0,0,0
-	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
 
 	TechRequired = basicScience
 	entryCost = 1099
@@ -51,9 +51,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RELAY001_ANIM
-		startEventGUIName = #autoLOC_6001338 // Extend
-		endEventGUIName = #autoLOC_6001339 // Retract
-		actionGUIName = #autoLOC_6001337 // Toggle Deploy
+		startEventGUIName = #RSS-MAG-ant-strt // Extend Antenna
+		endEventGUIName = #RSS-MAG-ant-stop // Retract Antenna
+		actionGUIName = #RSS-MAG-ant-actn // Antenna Toggle
 	 	isOneShot = false
 		eventAvailableEditor = True
 		eventAvailableFlight = True
