--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -21,8 +21,8 @@ PART
 	bulkheadProfiles = size0, srf
 
 	attachRules = 1,1,0,0,0
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
-	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
 
 	TechRequired = electronics
 	entryCost = 3400
@@ -51,9 +51,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = antenna1_animation
-		startEventGUIName = #autoLOC_6001338 // Extend
-		endEventGUIName = #autoLOC_6001339 // Retract
-		actionGUIName = #autoLOC_6001337 // Toggle Deploy
+		startEventGUIName = #RSS-MAG-ant-strt // Extend Antenna
+		endEventGUIName = #RSS-MAG-ant-stop // Retract Antenna
+		actionGUIName = #RSS-MAG-ant-actn // Antenna Toggle
 	 	isOneShot = false
 		eventAvailableEditor = True
 		eventAvailableFlight = True
