--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
@@ -28,9 +28,9 @@ PART
 	}
 
 	attachRules = 1,1,1,1,0
-	node_stack_top = -2.0, 0.93125, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = -2.0, -0.93125, 0.0, 0.0, -1.0, 0.0
-	node_attach = -1.22, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+	node_stack_top = -2.0, 0.93125, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = -2.0, -0.93125, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = -1.22, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
 
 	TechRequired = heavyAerodynamics
 	entryCost = 7199
@@ -122,12 +122,6 @@ PART
 			key = 0 1
 		}
 	}
-
-	// MODULE
-	// {
-	// 	name = FlagDecal
-	// 	textureQuadName = flagTransform
-	// }
 
 	MODULE
 	{
