--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -15,45 +15,46 @@ Localization
 	// Rusty Star Rockets
 		#RSR-name = Rusty Star Rockets
 		#RSR-tags = rsr rust star
-	
+
+// 0.8.99.3
+
+
 // 0.8.99.2
-
-		#RSS-MAG-ant-strt = Extend Antenna
-		#RSS-MAG-ant-stop = Retract Antenna
-		#RSS-MAG-ant-actn = Antenna Toggle
-
 	// RustyStarRockets\Parts\Antenna
-		#RSR-antenna-direct-1-titl = Comms RSR 1
-		#RSR-antenna-direct-1-desc = Use this to "phone home".
+		#RSS-ant-direct-1-titl = Comms RSR 1
+		#RSS-ant-direct-1-desc = Use this to "phone home".
 
-		#RSR-antenna-relay-100-titl = RSR-100 Relay Antenna "'Allo 'Allo!"
-		#RSR-antenna-relay-100-desc = Dial "K" for Kerbin
+		#RSS-ant-relay-100-titl = RSR-100 Relay Antenna "'Allo 'Allo!"
+		#RSS-ant-relay-100-desc = Dial "K" for Kerbin
 
-		#RSR-antenna-relay-x0-titl = Rusty Antenna Relay X-0
-		#RSR-antenna-relay-x0-desc = No signal? Try this beautiful piece of telecomunications technology.
+		#RSS-ant-relay-x0-titl = Rusty Antenna Relay X-0
+		#RSS-ant-relay-x0-desc = No signal? Try this beautiful piece of telecomunications technology.
 
-		#RSR-antenna-relay-x1-titl = Rusty Antenna Relay X-1
-		#RSR-antenna-relay-x1-desc = No signal? Try this beautiful piece of telecomunications technology.
+		#RSS-ant-relay-x1-titl = Rusty Antenna Relay X-1
+		#RSS-ant-relay-x1-desc = No signal? Try this beautiful piece of telecomunications technology.
 
 	// RustyStarRockets\Parts\Misc
-		#RSR-engine-alien-titl = Alien Engine
-		#RSR-engine-alien-desc = 
+		#RSS-eng-alien-titl = Alien Engine
+		#RSS-eng-alien-desc = Dolore officia magna est enim minim quis incididunt exercitation. Veniam ea quis id sint in.
 
 		#RSR-objectX-titl = ObjectX
-		#RSR-objectX-desc = .
+		#RSR-objectX-desc = Esse voluptate officia officia amet. Nostrud in magna qui ex minim mollit.
 
 		#RSR-StrangeDebris-titl = StrangeDebris
-		#RSR-StrangeDebris-desc = .
+		#RSR-StrangeDebris-desc = Consectetur tempor magna sit ea anim est veniam esse voluptate consequat consectetur. Excepteur nulla nisi sunt proident culpa.
 
 	// RustyStarRockets\Parts\Utility
-		#RSR-crew-cabin-250-titl = RSR Hitchhiker Storage Container
-		#RSR-crew-cabin-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
+		#RSS-crew-250-titl = RSR Hitchhiker Storage Container
+		#RSS-crew-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
 
-		#RSR-crew-cabin-radial-250-titl = RSR Radial Crew Container
-		#RSR-crew-cabin-radial-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
+		#RSS-crew-radial-250-titl = RSR Radial Crew Container
+		#RSS-crew-radial-250-desc = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
 
-		#RustyStar-RustyKlaw-titl = Rusty Klaw
-		#RustyStar-RustyKlaw-desc = .
+		#RSS-klaw-small-titl = Rusty Klaw, just smaller and cuter
+		#RSS-klaw-small-desc = Laborum proident ad labore do aliquip occaecat incididunt aliqua cillum officia. Non mollit laborum aliqua anim aliqua nostrud eu cillum ea.
+
+		#RSS-klaw-titl = Rusty Klaw
+		#RSS-klaw-desc = Laborum proident ad labore do aliquip occaecat incididunt aliqua cillum officia. Non mollit laborum aliqua anim aliqua nostrud eu cillum ea.
 
 // 0.8.99.1
 	// Parts\Base
@@ -125,32 +126,32 @@ Localization
 
 	// Parts\Electrical
 		#RSS-elec-reactor-titl = Rusty Reactor R-A7
-		#RSS-elec-reactor-desc = .
+		#RSS-elec-reactor-desc = Eu nostrud labore aliqua consequat et ex dolor consectetur esse. Incididunt nostrud consequat laboris elit laboris incididunt elit magna amet ad aliquip culpa elit.
 
 		#RSS-elec-solar-panel-titl = RSR Photovoltaic Panels
-		#RSS-elec-solar-panel-desc = .
+		#RSS-elec-solar-panel-desc = Reprehenderit sint nulla minim. Irure commodo sunt minim.
 
 		#RSS-elec-solar-round-titl = Round Rusty Solar Panel Static
-		#RSS-elec-solar-round-desc = decription needed
+		#RSS-elec-solar-round-desc = Pariatur anim ullamco ut in elit excepteur nisi esse culpa sunt enim ipsum. Ea est tempor reprehenderit occaecat sunt velit. Duis mollit proident ex tempor duis ut adipisicing voluptate magna do anim et.
 
 		#RSS-elec-solar-stat-titl = Rusty Solar Panel Static
-		#RSS-elec-solar-stat-desc = .
+		#RSS-elec-solar-stat-desc = Incididunt Lorem non consectetur dolor nulla commodo commodo dolore commodo dolor et fugiat magna. Labore aute nostrud in velit esse exercitation eiusmod elit.
 
 	// Parts\Science
-		#RSS-science-bay-material-titl = RSR Material Bay
-		#RSS-science-bay-material-desc = The research on advenced materials continues, although the best possible material is already known: rusty metal!
+		#RSS-sci-bay-material-titl = RSR Material Bay
+		#RSS-sci-bay-material-desc = The research on advenced materials continues, although the best possible material is already known: rusty metal!
 
-		#RSS-science-exp-goo-titl = RSR Mystery Goo™ Containment Unit
-		#RSS-science-exp-goo-desc = If you look inside the goo container, you will actually see a pair of dirty boots, a tunic, a kool thing and some other stuff.
+		#RSS-sci-exp-goo-titl = RSR Mystery Goo™ Containment Unit
+		#RSS-sci-exp-goo-desc = If you look inside the goo container, you will actually see a pair of dirty boots, a tunic, a kool thing and some other stuff.
 
-		#RSS-science-exp-rust-titl = Piece of rusty metal
-		#RSS-science-exp-rust-desc = Piece of rusty metal. It is rusty.
+		#RSS-sci-exp-rust-titl = Piece of rusty metal
+		#RSS-sci-exp-rust-desc = Piece of rusty metal. It is rusty.
 
-		#RSS-science-lab-1-titl = RSR Mobile Processing Lab
-		#RSS-science-lab-1-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
+		#RSS-sci-lab-1-titl = RSR Mobile Processing Lab
+		#RSS-sci-lab-1-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
 
-		#RSS-science-lab-2-titl = RSR Mobile Lab X2
-		#RSS-science-lab-2-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
+		#RSS-sci-lab-2-titl = RSR Mobile Lab X2
+		#RSS-sci-lab-2-desc = This Lab is a recreation of a legendary Z-lab, made decades ago by doctor Zonvie Kerman. The legends says that before dr. Zonvies work Kerbals had pale purple skin, but after some kind of incident in Z-lab, Kerbals started going green and having unstoppable urge to fly into space.
 
 	// Parts\Thermal
 		#RSS-therm-rad-titl = Rusty Radial Radiator
