--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-antenna-direct-1
-	// antenna2
+	oldName = antenna2
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,7 +16,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-direct-1
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.75
 	bulkheadProfiles = srf
 
@@ -29,9 +29,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSR-antenna-direct-1-titl
+	title = #RSS-ant-direct-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-antenna-direct-1-desc
+	description = #RSS-ant-direct-1-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 
