--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-antenna-relay-100
-	// rustyRelay
+	oldName = rustyRelay
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,7 +16,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-100
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.8
 	bulkheadProfiles = srf
 
@@ -32,9 +32,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSR-antenna-relay-100-titl
+	title = #RSS-ant-relay-100-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-antenna-relay-100-desc
+	description = #RSS-ant-relay-100-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.45
