--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-antenna-relay-x0
-	// RELAY001
+	oldName = RELAY001
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-x0
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 1.01
 	bulkheadProfiles =  srf
 
@@ -30,9 +30,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSR-antenna-relay-x0-titl
+	title = #RSS-ant-relay-x0-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-antenna-relay-x0-desc
+	description = #RSS-ant-relay-x0-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.05
