--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x1.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-antenna-relay-x1
-	// antenna1
+	oldName = antenna1
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,7 +16,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-x1
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.5
 	bulkheadProfiles = size0, srf
 
@@ -30,9 +30,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSR-antenna-relay-x1-titl
+	title = #RSS-ant-relay-x1-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-antenna-relay-x1-desc
+	description = #RSS-ant-relay-x1-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.25
