--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion-2.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-avion-2
-	//RSR_Avion2
+	oldName = RSR_Avion2
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,8 +16,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-avion-2/rsr-avion-2
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1
 
 	vesselType = Ship
