--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-capsule-0625
-	//RustyCapsule0
+	oldName = RustyCapsule0
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-0625/rsr-capsule-0625
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size0
 
 	vesselType = Ship
