--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-125.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-capsule-125
-	// RustyCapsule
+	oldName = RustyCapsule
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-125/rsr-capsule-125
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1
 
 	vesselType = Ship
