--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-capsule-250
-	// RustyCapsuleS2
+	oldName = RustyCapsuleS2
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-250/rsr-capsule-250
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
