--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-125.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-capsule-avion-125
-	// RustyCapsuleAvion
+	oldName = RustyCapsuleAvion
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -18,8 +18,8 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-avion-125/rsr-capsule-avion-125
 	}
 
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1
 
 	vesselType = Ship
