--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-250.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-capsule-avion-250
-	// Size2AvionCockpit
+	oldName = Size2AvionCockpit
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-avion-250/rsr-capsule-avion-250
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
