--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-cockpit-inline
-	// RSR_Inline_Cockpit
+	oldName = RSR_Inline_Cockpit
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-inline/rsr-cockpit-inline
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1
 
 	vesselType = Ship
