--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-cockpit-mk2
-	// RSRmk2Cockpit
+	oldName = RSRmk2Cockpit
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-mk2/rsr-cockpit-mk2
 	}
 	scale = 1.0
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = mk2
 
 	vesselType = Ship
