--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-hq
-	// RSR_HQ
+	oldName = RSR_HQ
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-hq/rsr-hq
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.8
 	bulkheadProfiles = size1
 
