--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-sphere-125
-	// sphere
+	oldName = sphere
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-sphere-125/rsr-sphere
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = srf
 
 	vesselType = Ship
