--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-sub-pod
-	// RSR_SubCP
+	oldName = RSR_SubCP
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-sub-pod/rsr-sub-pod
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
