--- a/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-strut-connector.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-strut-connector.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-strut-connector
-	// RSRstrutConnector
+	oldName = RSRstrutConnector
 	module = CompoundPart
 	author = HarvesteR
 
