--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-rcs-block
-	// RustyRCS_block
+	oldName = RustyRCS_block
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-rcs-block/rsr-rcs-block
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.25
 	bulkheadProfiles = srf
 
