--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-rw-125
-	//RustyReactionWheel
+	oldName = RustyReactionWheel
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-rw-125/rsr-rw-125
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1
 
 	iconCenter = 0, 3, 0
