--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-rw-250
-	// RustyReactionWheel2
+	oldName = RustyReactionWheel2
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/rsr-rw-250/rsr-rw-250
 	}
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	iconCenter = 0, 3, 0
