--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-elec-reactor
-	// RustyReactor
+	oldName = RustyReactor
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -18,8 +18,8 @@ PART
 	}
 	// model001.dds - SP03_NRM.dds
 	// model000.dds - model-03.dds
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,1,1,0
