--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-elec-solar-panel
-	// RSRdSP
+	oldName = RSRdSP
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-panel
 	}
 	// BUMP_NRM.dds - SP00_NRM.dds
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,1
