--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-stat.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-elec-solar-stat
-	// RustySolarPanelStatic
+	oldName = RustySolarPanelStatic
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-stat
 	}
 	// BUMP_NRM.dds - SP02_NRM.dds
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 1.2
 	bulkheadProfiles = srf
 
