--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-engine-alien
-	// AlienEngine
+	oldName = AlienEngine
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,7 +16,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Misc/AlienEngine/rsr-engine-alien
 	}
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,0
@@ -28,9 +28,9 @@ PART
 	category = none
 	subcategory = 0
 
-	title = #RSR-engine-alien-titl
+	title = #RSS-eng-alien-titl
 	manufacturer = X
-	description = #RSR-engine-alien-desc
+	description = #RSS-eng-alien-desc
 
 	mass = 1.75
 
