--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-objectX
-	// ObjectX
+	oldName = ObjectX
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,8 +16,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Misc/ObjectX/rsr-objectX
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,1,1,0
