--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-StrangeDebris
-	// StrangeDebris
+	oldName = StrangeDebris
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,8 +17,8 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Misc/StrangeDebris/rsr-strangedebris
 	}
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,1,1,0
