--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-science-bay-material
-	// RSRMaterialBay
+	oldName = RSRMaterialBay
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -18,8 +18,8 @@ PART
 	}
 	// bump_NRM.dds - SC03_NRM.dds
 	// emm.dds - emm3.dds
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,1,1,0
@@ -33,9 +33,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-science-bay-material-titl
+	title = #RSS-sci-bay-material-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-science-bay-material-desc
+	description = #RSS-sci-bay-material-desc
 	tags = #autoLOC_500693 //#autoLOC_500693 = bay experiment lab material research
 
 	mass = 0.2
