--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -8,6 +8,7 @@
 PART
 {
 	name = rsr-science-exp-goo
+	oldName = RSRgooExperiment
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +18,7 @@ PART
 	}
 	// bump_NRM.dds - SC04_NRM.dds
 	// emm.dds - emm4.dds
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.4
 	bulkheadProfiles = srf
 
@@ -32,7 +33,7 @@ PART
 
 	title = RSR Mystery Goo™ Containment Unit
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-science-exp-goo-desc
+	description = #RSS-sci-exp-goo-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.05
