--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-science-exp-rust
-	// RSR_POM
+	oldName = RSR_POM
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -16,7 +16,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-rust
 	}
-	scale = 1
+	scale = 1.0
 	rescaleFactor = 0.99
 	bulkheadProfiles = srf
 
@@ -29,9 +29,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-science-exp-rust-titl
+	title = #RSS-sci-exp-rust-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-science-exp-rust-desc
+	description = #RSS-sci-exp-rust-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.005
