--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-science-lab-2
-	// RSRLabX2
+	oldName = RSRLabX2
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -18,7 +18,7 @@ PART
 	}
 	// bump_NRM.dds - SC01_NRM.dds
 	// emm.dds - emm.dds
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
@@ -38,9 +38,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-science-lab-2-titl
+	title = #RSS-sci-lab-2-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-science-lab-2-desc
+	description = #RSS-sci-lab-2-desc
 	tags = #autoLOC_500690 //#autoLOC_500690 = experiment laboratory research science
 
 	mass = 3.5
