--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-crew-cabin-250
-	// RSR_HH
+	oldName = RSR_HH
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-crew-cabin-250
 	}
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
@@ -38,9 +38,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RSR-crew-cabin-250-titl
+	title = #RSS-crew-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-crew-cabin-250-desc
+	description = #RSS-crew-250-desc
 	tags = #autoLOC_500297 //#autoLOC_500297 = base cabin (can outpost passenger statio tour tuna
 
 	mass = 2.3
