--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
@@ -8,7 +8,7 @@
 PART
 {
 	name = rsr-crew-cabin-radial-250
-	// RSR_radial
+	oldName = RSR_radial
 	module = Part
 	author = GagaX and zer0Kerbal
 
@@ -17,7 +17,7 @@ PART
 	{
 		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-crew-cabin-radial
 	}
-	rescaleFactor = 1
+	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
 	vesselType = Ship
@@ -38,9 +38,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RSR-crew-cabin-radial-250-titl
+	title = #RSS-crew-radial-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-crew-cabin-radial-250-desc
+	description = #RSS-crew-radial-250-desc
 
 	mass = 1.7
 
