--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -8,16 +8,16 @@
 PART
 {
 	name = rsr-klaw
-	// RustyKlaw
+	oldName = RustyKlaw
 	module = Part
-	author = Squad
+	author = Squad and zer0Kerbal
 
 	// mesh = model.mu
 	MODEL
 	{
 		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw
 	}
-	scale = 1
+	scale = 1.0
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,0,0,0
@@ -30,9 +30,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = #RustyStar-RustyKlaw-titl
+	title = #RSS-klaw-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RustyStar-RustyKlaw-desc
+	description = #RSS-klaw-desc
 	tags = #autoLOC_500863 // a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
 
 	mass = 0.075
