--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
@@ -1,6 +1,14 @@
+// .cfg v1.8.99.0
+// Rusty Star Rockets (RSR)
+// created: 03 Nov 2015
+// updated: 05 Mar 2023
+
+// this file: CC BY-ND 4.0 by zer0Kerbal
+
 PART
 {
-	name = RSR_Parachute2
+	name = 
+	oldName = RSR_Parachute2
 	module = Part
 	author = GagaX and zer0Kerbal
 	mesh = model.mu
