--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
@@ -3,14 +3,13 @@
 // created: 
 // updated: 05 Mar 2023
 //
-// TEMPLATE: ghostParts.md v2.0.0.0
+// TEMPLATE: ghostParts.md v2.0.2.0
 // created: 17 Aug 2017
-// updated: 22 Feb 2023
+// updated: 09 Mar 2023
 
 // THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
 // creates duplicate part to prevent save game issues because of a part name change
-
 +PART[rsr-*]:HAS[#oldName[*]]:NEEDS[MOD-NAME]:LAST[MOD-NAME]
 {
 	@name = #$oldName$
@@ -23,5 +22,5 @@
 	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 	!tags = DELETE
-	// @tags = deleted
+	!oldName = DELETE
 }
