--- a/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
@@ -1,12 +1,15 @@
 // RustyStarRockets v1.0.0.0
 // Rusty Star Rockets (RSR)
-// created: 21 Aug 2022
-// updated: 21 Aug 2022
+// created: 04 Oct 2022
+// updated: 17 Mar 2023
+//
+// TEMPLATE: ModTags.md v1.1.0.0
+// created: 04 Oct 2022
+// updated: 17 Feb 2023
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
-// updates parts with localization strings
-
+// updates parts with MOD-NAME localization strings
 @PART[rsr-*]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
 {
 	tmp0 = #RSR-tags
