--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -1,10 +1,9 @@
-// rsr-antenna-direct-1.cfg v1.0.0.0
+// rsr-antenna-direct-1.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 15 Jan 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
-
 PART
 {
 	name = rsr-antenna-direct-1
@@ -12,10 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-direct-1
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-direct-1 }
 	scale = 1.0
 	rescaleFactor = 0.75
 	bulkheadProfiles = srf
@@ -34,7 +30,6 @@ PART
 	description = #RSS-ant-direct-1-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
-
 	mass = 0.03
 
 	dragModelType = default
@@ -44,7 +39,7 @@ PART
 
 	crashTolerance = 8
 
-	maxTemp = 2000 // = 3200
+	maxTemp = 2000
 
 	MODULE
 	{
