--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -1,10 +1,9 @@
-// rsr-antenna-relay-100.cfg v1.0.0.0
+// rsr-antenna-relay-100.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 15 Jan 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
-
 PART
 {
 	name = rsr-antenna-relay-100
@@ -12,10 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-100
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-100 }
 	scale = 1.0
 	rescaleFactor = 0.8
 	bulkheadProfiles = srf
