--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
@@ -1,7 +1,7 @@
-// rsr-antenna-relay-x0.cfg v1.0.0.0
+// rsr-antenna-relay-x0.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 15 Jan 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
 
@@ -12,11 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-x0
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Antenna/rsr-antenna-relay-x0 }
 	scale = 1.0
 	rescaleFactor = 1.01
 	bulkheadProfiles =  srf
@@ -45,7 +41,7 @@ PART
 
 	crashTolerance = 7
 
-	maxTemp = 2000 // = 3000
+	maxTemp = 2000
 
 	MODULE
 	{
