--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/DrogueChute.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/DrogueChute.cfg
@@ -1,41 +1,51 @@
-// .cfg v1.8.99.0
+// rsr-chute-drogue.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 05 Mar 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
 
 PART
 {
-	name = 
+	name = rsr-chute-drogue
 	oldName = DrogueChute
 	module = Part
 	author = GagaX and zer0Kerbal
-	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Chute/drogue/rsr-chute-drogue }
 	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,0
 	node_attach = 0.0, 0.0, 0.32469, 0.0, 0.0, -1.0
+
 	sound_parachute_open = activate
+
 	TechRequired = survivability
 	entryCost = 100
 	cost = 50
 	category = Utility
 	subcategory = 0
+
 	title = RSR Drogue Parachute
-manufacturer = #RSS-Agency-titl
+	manufacturer = #RSS-Agency-titl
 	description = It's not the fall that kills you; it's the sudden stop at the end. - Douglas Adams
-	attachRules = 0,1,0,0,0
+
 	mass = 0.1
+
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
+
 	maxTemp = 2500 // = 3100
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
+
 	bodyLiftMultiplier = 0
+
 	stageOffset = -1
-	bulkheadProfiles = srf
 	MODULE
 	{
 		name = ModuleParachute
@@ -57,6 +67,20 @@ invertCanopy = true
                 machHeatMultBase = 0.5
 		chuteThermalMassPerArea = 0.08
 	}
+
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = SEMIDEPLOYED
+		dragModifier = 2.5
+	}
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = DEPLOYED
+		dragModifier = 8
+	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -212,16 +236,5 @@ invertCanopy = true
 			prestige = Exceptional
 		}
 	}
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = SEMIDEPLOYED
-		dragModifier = 2.5
-	}
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = DEPLOYED
-		dragModifier = 8
-	}
+
 }
