--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial-2.cfg
@@ -1,7 +1,7 @@
-// .cfg v1.8.99.0
+// rsr-chute-radial-2.cfg v1.8.99.0 v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 05 Mar 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
 
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Chute/rsr-chute-radial-2
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Chute/rsr-chute-radial-2 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size0, srf
