--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_radial.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_radial.cfg
@@ -1,54 +1,62 @@
-// .cfg v1.8.99.0
+// rsr-capsule-radial.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 05 Mar 2023
+// updated: 18 Mar 2023
 
 // this file: CC BY-ND 4.0 by zer0Kerbal
 
 PART
 {
-	name = 
+	name = rsr-capsule-radial
 	oldName = RSR_radial
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = NewModel.mu
 	rescaleFactor = 1.0
+	bulkheadProfiles = size2
+
+	vesselType = Ship
+	CrewCapacity = 4
+	INTERNAL { name = Radial }
+
+	attachRules = 1,1,1,1,0
 	node_stack_top = -2.0, 0.93125, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = -2.0, -0.93125, 0.0, 0.0, -1.0, 0.0
 	node_attach = -1.22, 0.0, 0.0, 1.0, 0.0, 0.0, 1
-	CrewCapacity = 4
+
+
 	TechRequired = heavyAerodynamics
 	entryCost = 7199
 	cost = 1899
 	category = Utility
 	subcategory = 0
+
 	title = RSR Radial Crew Container
 	manufacturer = #RSS-Agency-titl
 	description = "A towel, (The Hitchhiker's Guide to the Galaxy) says, is about the most massively useful thing an interstellar hitchhiker can have. Partly it has great practical value. You can wrap it around you for warmth as you bound across the cold moons of Jaglan Beta; you can lie on it on the brilliant marble-sanded beaches of Santraginus V, inhaling the heady sea vapors; you can sleep under it beneath the stars which shine so redly on the desert world of Kakrafoon; use it to sail a miniraft down the slow heavy River Moth; wet it for use in hand-to-hand-combat; wrap it round your head to ward off noxious fumes or avoid the gaze of the Ravenous Bugblatter Beast of Traal (such a mind-boggingly stupid animal, it assumes that if you can't see it, it can't see you); you can wave your towel in emergencies as a distress signal, and of course dry yourself off with it if it still seems to be clean enough." ? Douglas Adams, The Hitchhiker's Guide to the Galaxy
-	attachRules = 1,1,1,1,0
+
 	mass = 1.7
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
+
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
+
 	maxTemp = 1000
 	skinMaxTemp = 2000
-	vesselType = Ship
-	bulkheadProfiles = size2
-	INTERNAL
-	{
-		name = Radial
-	}
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
 		experimentID = crewReport
-		experimentActionName = Crew Report
-		resetActionName = Discard Crew Report
-		reviewActionName = Review Report
+		experimentActionName = #autoLOC_502009 // Crew Report
+		resetActionName = #autoLOC_502010 // Discard Crew Report
+		reviewActionName = #autoLOC_502200 // Review Report
 		useStaging = False
 		useActionGroups = True
 		hideUIwhenUnavailable = True
@@ -57,15 +65,22 @@ PART
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
 	}
+
 	MODULE
 	{
 		name = ModuleScienceContainer
-		reviewActionName = Review Stored Data
-		storeActionName = Store Experiments
-		evaOnlyStorage = True
+		
+		reviewActionName = #autoLOC_502201 // Review Stored Data
+		storeActionName = #autoLOC_502202 // Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
 		storageRange = 2.0
+		allowRepeatedSubjects = True
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
+		showStatus = True
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleColorChanger
 		shaderProperty = _EmissiveColor
