--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-avion.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-avion/rsr-avion
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-avion/rsr-avion }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
