--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-0625/rsr-capsule-0625
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-capsule-0625/rsr-capsule-0625 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size0
