--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-250.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-capsule-avion-250/rsr-capsule-avion-250
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-capsule-avion-250/rsr-capsule-avion-250 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
