--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-inline.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-inline/rsr-cockpit-inline
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-inline/rsr-cockpit-inline }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
