--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-mk2/rsr-cockpit-mk2
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-cockpit-mk2/rsr-cockpit-mk2 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = mk2
