--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-hq/rsr-hq
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-hq/rsr-hq }
 	scale = 1.0
 	rescaleFactor = 0.8
 	bulkheadProfiles = size1
