--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX
 
 	// mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-KerbalInTheBox/rsr-KerbalInTheBox
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-KerbalInTheBox/rsr-KerbalInTheBox }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
