--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-skull-pod/rsr-skull-pod
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-skull-pod/rsr-skull-pod }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
