--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = sphere.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-sphere-125/rsr-sphere
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-sphere-125/rsr-sphere }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = srf
