--- a/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-fuelline.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-fuelline.cfg
@@ -12,10 +12,7 @@ PART
 	module = CompoundPart
 	author = HarvesteR
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-fuelline/rsr-fuelline
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-fuelline/rsr-fuelline }
 	scale = 0.1
 	bulkheadProfiles = srf
 
