--- a/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-strut-connector.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/CompoundParts/rsr-strut-connector.cfg
@@ -13,10 +13,7 @@ PART
 	author = HarvesteR
 
 	// mesh = strutConnector.DAE
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-strut-connector/rsr-strut-connector
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-strut-connector/rsr-strut-connector }
 	scale = 0.1
 	bulkheadProfiles = srf
 
