--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rcs-block.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-rcs-block/rsr-rcs-block
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-rcs-block/rsr-rcs-block }
 	scale = 1.0
 	rescaleFactor = 0.25
 	bulkheadProfiles = srf
