--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-125.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-rw-125/rsr-rw-125
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-rw-125/rsr-rw-125 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
