--- a/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Control/rsr-rw-250.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/rsr-rw-250/rsr-rw-250
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-rw-250/rsr-rw-250 }
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
