--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-reactor
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-reactor }
 	// model001.dds - SP03_NRM.dds
 	// model000.dds - model-03.dds
 	scale = 1.0
