--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-panel.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-panel
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-panel }
 	// BUMP_NRM.dds - SP00_NRM.dds
 	rescaleFactor = 1.0
 	bulkheadProfiles = srf
