--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-round.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-solar-round.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-round
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Electrical/rsr-elec-solar-round }
 	// BUMP_NRM.dds - SP01_NRM.dds
 	scale = 1.0
 	rescaleFactor = 1.2
