--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Misc/AlienEngine/rsr-engine-alien
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Misc/AlienEngine/rsr-engine-alien }
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
