--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-objectX.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Misc/ObjectX/rsr-objectX
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Misc/ObjectX/rsr-objectX }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
