--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-strangedebris.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Misc/StrangeDebris/rsr-strangedebris
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Misc/StrangeDebris/rsr-strangedebris }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
