--- a/GameData/RustyStar/RustyStarRockets/Parts/RSR_lights/landingLaser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/RSR_lights/landingLaser.cfg
@@ -20,13 +20,10 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 1
 	crashTolerance = 8
-	maxTemp = 2000 // = 3200
+	maxTemp = 2000
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-MODEL
-	{
-		model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/landingLaser
-	}
+MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/landingLaser }
 	MODULE
 	{
 		name = ModuleLight
