--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-bay-material.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-bay-material
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-bay-material }
 	// bump_NRM.dds - SC03_NRM.dds
 	// emm.dds - emm3.dds
 	scale = 1.0
