--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-goo
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-goo }
 	// bump_NRM.dds - SC04_NRM.dds
 	// emm.dds - emm4.dds
 	scale = 1.0
