--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-rust
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-exp-rust }
 	scale = 1.0
 	rescaleFactor = 0.99
 	bulkheadProfiles = srf
