--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-1.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-lab-1
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-lab-1 }
 	// bump_NRM.dds - SC02_NRM.dds
 	// emm.dds - em2.dds
 	rescaleFactor = 1.0
