--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-lab-2
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Science/rsr-science-lab-2 }
 	// bump_NRM.dds - SC01_NRM.dds
 	// emm.dds - emm.dds
 	rescaleFactor = 1.0
