--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
@@ -12,10 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Thermal/rsr-therm-rad
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Thermal/rsr-therm-rad }
 	// bump_NRM.dds - SP04_NRM.dds
 	// emm.dds - SP04_EMM.dds
 	rescaleFactor = 1.0
