--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -13,10 +13,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	// mesh = NewModel.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-crew-cabin-250
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Utility/rsr-crew-cabin-250 }
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
 
