--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw-small.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw-small.cfg
@@ -11,10 +11,7 @@ PART
 	module = Part
 	author = Squad and zer0Kerbal
 
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw }
 	scale = 1.0
 	rescaleFactor = 0.5
 	bulkheadProfiles = size0, srf
