--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -13,10 +13,7 @@ PART
 	author = Squad and zer0Kerbal
 
 	// mesh = model.mu
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Utility/rsr-klaw }
 	scale = 1.0
 	bulkheadProfiles = size1, srf
 
