--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
@@ -19,10 +19,7 @@ PART
 
 	vesselType = Ship
 	CrewCapacity = 4
-	INTERNAL
-	{
-		name = Radial
-	}
+	INTERNAL { name = Radial }
 
 	attachRules = 1,1,1,1,0
 	node_stack_top = -2.0, 0.93125, 0.0, 0.0, 1.0, 0.0, 2, 1
