--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
@@ -20,25 +20,28 @@ PART
 	attachRules = 0,1,0,0,0
 	node_attach = 0.0, 0.0, 0.32469, 0.0, 0.0, -1.0
 
+	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
+	sound_parachute_single = deploy
 
 	TechRequired = survivability
-	entryCost = 100
-	cost = 50
+	entryCost = 500
+	cost = 100
 	category = Utility
 	subcategory = 0
 
 	title = RSR Drogue Parachute
 	manufacturer = #RSS-Agency-titl
 	description = It's not the fall that kills you; it's the sudden stop at the end. - Douglas Adams
+	tags = #autoLOC_500926 // arrest canopy chute decel descen drag entry fall landing orange re- return safe slow stab
 
-	mass = 0.1
+	mass = 0.1 // 0.075 mk12-r
 
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
 
-	maxTemp = 2500 // = 3100
+	maxTemp = 2500
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
@@ -46,10 +49,12 @@ PART
 	bodyLiftMultiplier = 0
 
 	stageOffset = -1
+	preferredStage = PARACHUTESTAGE
+
 	MODULE
 	{
 		name = ModuleParachute
-invertCanopy = true
+		invertCanopy = true
 		autoCutSpeed = 0.5
 		capName = cap
 		canopyName = canopy
@@ -64,7 +69,7 @@ invertCanopy = true
 		deploymentSpeed = 0.12
 		semiDeploymentSpeed = 0.5
 		chuteMaxTemp = 1200
-                machHeatMultBase = 0.5
+		machHeatMultBase = 0.5
 		chuteThermalMassPerArea = 0.08
 	}
 
