--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
@@ -7,40 +7,64 @@
 
 PART
 {
-	name = 
+	name = rsr-chute
 	oldName = RSR_Parachute2
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = model.mu
 	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = size1, srf
+
+	attachRules = 1,0,0,1,0
 	node_stack_bottom = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0
+
 	sound_parachute_open = activate
+
 	TechRequired = landing
 	entryCost = 4600
 	cost = 850
 	category = Utility
 	subcategory = 0
+
 	title = RSR Parachute
-manufacturer = #RSS-Agency-titl
+	manufacturer = #RSS-Agency-titl
 	description = It's not the fall that kills you; it's the sudden stop at the end.- Douglas Adams
-	attachRules = 1,0,0,1,0
+
 	mass = 0.3
+
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
-	maxTemp = 2500 // = 3100
+
+	maxTemp = 2500
 	emissiveConstant = 0.7
+
 	breakingForce = 100
 	breakingTorque = 50
+
 	bodyLiftMultiplier = 0
 	stageOffset = -1
-	bulkheadProfiles = size1, srf
+
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = SEMIDEPLOYED
+		dragModifier = 0.67
+	}
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = DEPLOYED
+		dragModifier = 25
+	}
+
 	MODULE
 	{
 		name = ModuleParachute
-invertCanopy = true
+		invertCanopy = true
 		autoCutSpeed = 0.5
 		capName = cap
 		canopyName = canopy
@@ -56,6 +80,7 @@ invertCanopy = true
 		semiDeploymentSpeed = 0.5
 		chuteMaxTemp = 650
 	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -211,16 +236,5 @@ invertCanopy = true
 			prestige = Exceptional
 		}
 	}
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.67
-	}
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = DEPLOYED
-		dragModifier = 25
-	}
+
 }
