--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/RSR_Parachute2.cfg
@@ -12,7 +12,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	mesh = model.mu
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Chute/chute/rsr-chute }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1, srf
